fixed up social media contacts stuff

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,11 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.michaelsobrepera.com" # the base hostname & protocol for your site
 twitter_username: m_sobrepera
 github_username:  mjsobrep
-
+linkedin: https://www.linkedin.com/in/michaelsobrepera
+name: Michael Sobrepera
+phoneNum: (770)324-6196
+skype_username: michael.sobrepera
+grabcad_site: michael.sobrepera-1
 # Build settings
 markdown: kramdown
 
