corrected twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: mjsobrep@live.com
 description: A site about stuff that I (Michael Sobrepera) work on, think, enjoy, etc...
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.michaelsobrepera.com" # the base hostname & protocol for your site
-twitter_username: m_sobrepera
+twitter_username: mjsobrep
 github_username:  mjsobrep
 linkedin: https://www.linkedin.com/in/michaelsobrepera
 name: Michael Sobrepera
