added flickr link to footer, closes #14

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ name: Michael Sobrepera
 phoneNum: (770)324-6196
 skype_username: michael.sobrepera
 grabcad_site: michael.sobrepera-1
+flickr_alias: mjsobrep 
 # Build settings
 markdown: kramdown
 
